--- CHANGELOG ---

--- PyFMI-trunk ---
    * Fixed so that the log file is kept open during the initialization
      call (ticket:5823)
    * Added support for binary result saving for coupled CS simulations
      and switched the default storing option to binary (ticket:5820)
    * Changed default value of "linear_correction" to False for coupled
      CS simulations (ticket:5821)
    * Fixed issue with discrete couplings for coupled CS simulations
      (ticket:5822)

--- PyFMI-2.5.3 ---
    * Fixed wrong default value for FMUModelME1Extended (ticket:5801)

--- PyFMI-2.5.2 ---
    * Improved relative imports of Assimulo dependent classes (ticket:5798)
    * Fixed unicode symbols in result files (ticket:5797)

--- PyFMI-2.5.1 ---
    * Fixed a number of encode/decoding issues for Python3 (ticket:5786)
    * Forced no copy if the provided array is already correct, minor 
      performance improvement (ticket:5785)
    * Removed a number of C compiler warnings (ticket:5782)
    * Fixed issue with corrupt result files after failed simulations (ticket:5784)
    * Added (hidden) option to only load the XML from an FMU, for testing
      purposes (ticket:5778)

--- PyFMI-2.5 ---
    * Fixed issue with atol not being updated when rtol is set (ticket:5709)
    * Added check on the nominal values (ticket:5706)
    * Fixed issue with reusing the FD computed Jacobian (ticket:5668)
    * Fixed potential race condition when creating temp directories (ticket:5660)
    * Added a method to retrieve the PyFMI log level (ticket:5639)
    * Made the binary result saving robust to handle incorrect model descriptions (ticket:5624)
    * Fixed issue with using the result filter together with FMI1 (ticket:5623)
    * Improved input handling for FMI2 (ticket:5615)
    * Cleanup of simulation logging (ticket:5614)
    * Fixed simulation logging when there are no states (ticket:5613)
    * Fixed issue with wrong return of time varying variables (ticket:5597)